[package]
name = "plinth-util"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/gusjengis/Plinth-Util"
description = "Utility functions for the Plinth stack."
license = "MIT OR Apache-2.0"

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
